@@ -47,11 +47,15 @@
  <runtime name="RIVET_ANALYSIS_PATH"   value="$LOCALTOP/lib/$SCRAM_ARCH"             type="path"/>
  <runtime name="LANG"                  value="C"/>
  <runtime name="TEST_SRTOPT_PATH"      value="$LOCALTOP/test/$SCRAM_ARCH"            type="path"/>
- <release name="_CXXMODULE">
+ <ifrelease name="_CXXMODULE">
   <runtime name="CLING_PREBUILT_MODULE_PATH" value="$LOCALTOP/biglib/$SCRAM_ARCH"    type="path"/>
   <runtime name="CLING_PREBUILT_MODULE_PATH" value="$LOCALTOP/lib/$SCRAM_ARCH"       type="path"/>
- </release>
- <release name="_ASAN">
+ <elif name="_ASAN"/>
   <runtime name="ASAN_OPTIONS"         value="detect_leaks=0:alloc_dealloc_mismatch=0"/>
- </release>
+  <runtime name="LD_PRELOAD" value="$GCC_RUNTIME_ASAN" type="path"/>
+ <elif name="_UBSAN"/>
+  <runtime name="LD_PRELOAD" value="$GCC_RUNTIME_UBSAN" type="path"/>
+ <elif name="_TSAN"/>
+  <runtime name="LD_PRELOAD" value="$GCC_RUNTIME_TSAN" type="path"/>
+ </ifrelease>
 </tool>
